kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: blob-farm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blob-farm
      tier: backend
  template:
    metadata:
      labels:
        app: blob-farm
        tier: backend
    spec:
      containers:
      - name: backend
        image: fabilier228/backend-service:latest
        ports:
        - containerPort: 3000
