kubernetes/backend2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend2-deployment
  labels:
    app: blob-farm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blob-farm
      tier: backend2
  template:
    metadata:
      labels:
        app: blob-farm
        tier: backend2
    spec:
      containers:
      - name: backend2
        image: fabilier228/backend2-service:latest
        ports:
        - containerPort: 3002
