kubernetes/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: blob-farm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blob-farm
      tier: database
  template:
    metadata:
      labels:
        app: blob-farm
        tier: database
    spec:
      containers:
      - name: postgres
        image: postgres:13-alpine 
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data 
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
