kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: blob-farm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blob-farm
      tier: frontend
  template:
    metadata:
      labels:
        app: blob-farm
        tier: frontend
    spec:
      containers:
      - name: frontend
        image: fabilier228/frontend-service:1.2
        ports:
        - containerPort: 3001
