kubernetes/backend2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend2-service
  labels:
    app: blob-farm
spec:
  selector:
    app: blob-farm
    tier: backend2
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002 
  type: ClusterIP
