kubernetes/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service 
  labels:
    app: blob-farm
spec:
  selector:
    app: blob-farm
    tier: database
  ports:
    - protocol: TCP
      port: 5432 
      targetPort: 5432 
  type: ClusterIP
