kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: blob-farm
spec:
  selector:
    app: blob-farm
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001 
  type: LoadBalancer
