kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/api2/"
        backend:
          service:
            name: backend2-service
            port:
              number: 3002
      - pathType: Prefix
        path: "/api/"
        backend:
          service:
            name: backend-service
            port:
              number: 3000
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-service
            port:
              number: 80
